# PipeYAML

./: .gitignore  CMakeLists.txt  LICENSE  PipeYAML 架构设计文档.md  README.md
.atomcode/: settings.json
.atomcode/skills/code-reviewer/: SKILL.md
.atomcode/skills/gen-test/: SKILL.md
.atomcode/skills/project-conventions/: SKILL.md
.atomcode/skills/security-reviewer/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: bench_data.h  bench_parse.cpp  bench_yamlcpp.cpp
benchmarks/data/: large.yaml  medium.yaml  small.yaml
include/pipeyaml/: emitter.h  exception.h  node.h  parser.h  pipeyaml.h  scanner.h  stream.h
src/: convert.cpp  emitter.cpp  node.cpp  parser.cpp  scanner.cpp  stream.cpp
tests/integration/: test_roundtrip.cpp
tests/unit/: test_emitter.cpp  test_node.cpp  test_parser.cpp  test_scanner.cpp  test_stream.cpp
